FEAT: 인장신청, 인장등록, 인장관리 기능